--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Tromodo</title>
 </head>
 <body>
-    <img href="https://youtube.com/favicon.ico" alt="YouTube">
+    <img href="https://youtu.be/favicon.ico" alt="YouTube">
 </body>
 </html>
