--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Tromodo</title>
 </head>
 <body>
-    <img href="https://youtube.com/favicon.ico">
+    <img src="YT.png">
 </body>
 </html>
