--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tromodo Video Explorer">
     <title>Tromodo</title>
+
+    <style>
+        .from-logo {
+            width: 50px; height: 50px;
+        }
+    </style>
 </head>
 <body>
     <img src="YT.png">
