--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <style>
         .from-logo {
-            width: 50px; height: 50px;
+            max-width: 50px; max-height: 50px;
         }
     </style>
 </head>
