--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
 </head>
 <body>
     <img class="from-logo" src="YT.png">
+
+    <script src="index.js"></script>
+    <script>
+        // for later
+    </script>
 </body>
 </html>
